# marko

./: .gitignore  .gitmodules  COPYING  INSTALL  LICENSE  Makefile.am  README.md  arm-wrs-linux-gnueabi-libtool  config.h  config.h.in  config.status  configure  configure.ac  ltmain.sh
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.3  traces.4
compiler/: Makefile.am  grpc_c_file.cc  grpc_c_file.h  grpc_c_generator.cc  grpc_c_generator.h  grpc_c_helpers.cc  grpc_c_helpers.h  grpc_c_message.cc  grpc_c_message.h  grpc_c_service.cc  grpc_c_service.h  main.cc
examples/: Makefile.am  bidi_streaming.proto  bidi_streaming_client.c  bidi_streaming_server.c  client_streaming.proto  client_streaming_client.c  client_streaming_server.c  foo.proto  foo_client.c  foo_server.c  server_streaming.proto  server_streaming_client.c  server_streaming_server.c  unary_async_client.c  unary_sync_client.c
examples/cpp/helloworld/: Makefile.am  configure.ac
lib/: Makefile.am  client.c  context.c  context.h  hooks.c  hooks.h  memory.c  metadata_array.c  metadata_array.h  service.c  stream_ops.c  stream_ops.h  thread_pool.c  thread_pool.h  trace.c  trace.h
lib/common/: aux_types.h  env.h  env_paths.h  snprintf_safe.c  strdupf.c  strextra.h  strndup.c
lib/h/grpc-c/: grpc-c.h
test/: Makefile.am  README.md
test/end2end/: Makefile.am  README.md  client.c  grpc_c_end2end_tests.h  server.c  tester.c  unary_sync.proto  unary_sync_client.c  unary_sync_server.c
test/interop/: Makefile.am  client.c  server.c
test/interop/proto/: test.proto
